--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 	<body>
 		<h1>Odin Recipes</h1>
-		<a href="recipes/avocado-toast.html">Avocado Toast</a>
+		<ul>
+			<li><a href="recipes/avocado-toast.html">Avocado Toast</a></li>
+			<li><a href="recipes/french-toast.html">French Toast</a></li>
+			<li><a href="recipes/seed-pancakes.html">Seed Pancakes</a></li>
+		</ul>
 	</body>
 </html>
